chore: user-service added endpoints and tests
